--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -1,1 +1,2 @@
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css">
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/overrides.css">
